<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="2dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="10dp"
    android:id="@+id/select_card_view"
    android:background="@drawable/shadow_button_later_bottom_background">


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="start|center"
        android:layout_marginStart="14dp"
        android:src="@drawable/baselines_delivery_package"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/animal_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="80dp"
        android:text="@string/animal_name"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/_08_06_2024_15_54"
        android:textSize="12sp"/>


</androidx.cardview.widget.CardView>