<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AnimalDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="20dp"
        android:background="@drawable/shadow_button_later_bottom_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_button_background"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_constraint_layout"
        android:layout_above="@id/bottom_constraint_layout">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/shadow_button_later_bottom_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <TextView
                android:id="@+id/animal_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/animal_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/animal_details_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/animal_details_"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/_08_06_2024_15_54"
                android:textSize="15sp" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="20dp"
        android:background="@drawable/shadow_button_later_bottom_background"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/block_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_buttom_solid_black_background"
            android:text="@string/block_animal"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>